// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Checkbox" renders (dark theme) 1`] = `
.emotion-0 {
  background: #000;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  position: relative;
  left: -0.3rem;
}

.emotion-2 {
  position: relative;
  line-height: 1.4;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
  cursor: pointer;
}

.wireinput:checked+.emotion-2::before {
  background: #0667c8;
  border-color: #0667c8;
}

.wireinput:checked+.emotion-2>svg {
  fill: #000;
}

.wireinput+.emotion-2>svg {
  fill: none;
  position: absolute;
  left: -0.75rem;
  top: 0.25rem;
}

.wireinput:focus-visible+.emotion-2::before {
  border-color: #0667c8;
}

.wireinput:hover+.emotion-2::before {
  border-color: #0667c8;
}

.wireinput+.emotion-2::before {
  background: #edeff0;
  border: 1.5px solid #54585f;
  border-radius: 3px;
  box-sizing: border-box;
  content: "";
  display: inline-block;
  height: 22px;
  line-height: 1.4;
  margin: 0 8px 0 -16px;
  width: 22px;
  color: #fff;
}

.emotion-2 a {
  color: #0667c8;
  display: inline;
  font-size: 16px;
  font-weight: 300;
  text-align: left;
  text-transform: none;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
}

.emotion-2 a:hover {
  color: rgb(5, 87, 168);
}

.emotion-2 a:visited,
.emotion-2 a:link,
.emotion-2 a:active {
  color: #0667c8;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <input
      className="wireinput"
      id="1"
      style={
        Object {
          "cursor": "pointer",
          "height": "22px",
          "marginBottom": "0",
          "opacity": 0,
          "width": "22px",
        }
      }
      type="checkbox"
    />
    <label
      className="emotion-2"
      htmlFor="1"
    >
      Checkbox
      <svg
        height="13"
        viewBox="0 0 16 13"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.65685 12.0711L15.9842 1.62738L14.57 0.213167L5.65685 9.24264L1.41421 5L0 6.41421L5.65685 12.0711Z"
        />
      </svg>
    </label>
  </div>
</div>
`;

exports[`"Checkbox" renders 1`] = `
.emotion-0 {
  background: rgb(237, 237, 238);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  position: relative;
  left: -0.3rem;
}

.emotion-2 {
  position: relative;
  line-height: 1.4;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
  cursor: pointer;
}

.wireinput:checked+.emotion-2::before {
  background: #0667c8;
  border-color: #0667c8;
}

.wireinput:checked+.emotion-2>svg {
  fill: rgb(237, 237, 238);
}

.wireinput+.emotion-2>svg {
  fill: none;
  position: absolute;
  left: -0.75rem;
  top: 0.25rem;
}

.wireinput:focus-visible+.emotion-2::before {
  border-color: #0667c8;
}

.wireinput:hover+.emotion-2::before {
  border-color: #0667c8;
}

.wireinput+.emotion-2::before {
  background: #edeff0;
  border: 1.5px solid #edeff0;
  border-radius: 3px;
  box-sizing: border-box;
  content: "";
  display: inline-block;
  height: 22px;
  line-height: 1.4;
  margin: 0 8px 0 -16px;
  width: 22px;
  color: rgb(29, 30, 31);
}

.emotion-2 a {
  color: #0667c8;
  display: inline;
  font-size: 16px;
  font-weight: 300;
  text-align: left;
  text-transform: none;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
}

.emotion-2 a:hover {
  color: rgb(5, 87, 168);
}

.emotion-2 a:visited,
.emotion-2 a:link,
.emotion-2 a:active {
  color: #0667c8;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <input
      className="wireinput"
      id="1"
      style={
        Object {
          "cursor": "pointer",
          "height": "22px",
          "marginBottom": "0",
          "opacity": 0,
          "width": "22px",
        }
      }
      type="checkbox"
    />
    <label
      className="emotion-2"
      htmlFor="1"
    >
      Check
      <svg
        height="13"
        viewBox="0 0 16 13"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.65685 12.0711L15.9842 1.62738L14.57 0.213167L5.65685 9.24264L1.41421 5L0 6.41421L5.65685 12.0711Z"
        />
      </svg>
    </label>
  </div>
</div>
`;

exports[`"Checkbox" renders as invalid 1`] = `
.emotion-0 {
  background: rgb(237, 237, 238);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  position: relative;
  left: -0.3rem;
}

.emotion-2 {
  position: relative;
  line-height: 1.4;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
  cursor: pointer;
}

.wireinput:checked+.emotion-2::before {
  background: #0667c8;
  border-color: #0667c8;
}

.wireinput:checked+.emotion-2>svg {
  fill: rgb(237, 237, 238);
}

.wireinput+.emotion-2>svg {
  fill: none;
  position: absolute;
  left: -0.75rem;
  top: 0.25rem;
}

.wireinput:focus-visible+.emotion-2::before {
  border-color: #0667c8;
}

.wireinput:hover+.emotion-2::before {
  border-color: #0667c8;
}

.wireinput+.emotion-2::before {
  background: #edeff0;
  border: 1.5px solid #c20013;
  border-radius: 3px;
  box-sizing: border-box;
  content: "";
  display: inline-block;
  height: 22px;
  line-height: 1.4;
  margin: 0 8px 0 -16px;
  width: 22px;
  color: rgb(29, 30, 31);
}

.emotion-2 a {
  color: #0667c8;
  display: inline;
  font-size: 16px;
  font-weight: 300;
  text-align: left;
  text-transform: none;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
}

.emotion-2 a:hover {
  color: rgb(5, 87, 168);
}

.emotion-2 a:visited,
.emotion-2 a:link,
.emotion-2 a:active {
  color: #0667c8;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <input
      className="wireinput"
      id="1"
      style={
        Object {
          "cursor": "pointer",
          "height": "22px",
          "marginBottom": "0",
          "opacity": 0,
          "width": "22px",
        }
      }
      type="checkbox"
    />
    <label
      className="emotion-2"
      htmlFor="1"
    >
      Check
      <svg
        height="13"
        viewBox="0 0 16 13"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.65685 12.0711L15.9842 1.62738L14.57 0.213167L5.65685 9.24264L1.41421 5L0 6.41421L5.65685 12.0711Z"
        />
      </svg>
    </label>
  </div>
</div>
`;

exports[`"Checkbox" renders disabled 1`] = `
.emotion-0 {
  background: rgb(237, 237, 238);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  position: relative;
  left: -0.3rem;
}

.emotion-2 {
  position: relative;
  line-height: 1.4;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 0.56;
  cursor: not-allowed;
}

.wireinput:checked+.emotion-2::before {
  background: #edeff0;
  border-color: #0667c8;
}

.wireinput:checked+.emotion-2>svg {
  fill: rgb(237, 237, 238);
}

.wireinput+.emotion-2>svg {
  fill: none;
  position: absolute;
  left: -0.75rem;
  top: 0.25rem;
}

.wireinput+.emotion-2::before {
  background: #edeff0;
  border: 1.5px solid #9fa1a7;
  border-radius: 3px;
  box-sizing: border-box;
  content: "";
  display: inline-block;
  height: 22px;
  line-height: 1.4;
  margin: 0 8px 0 -16px;
  width: 22px;
  color: rgb(29, 30, 31);
}

.emotion-2 a {
  color: #0667c8;
  display: inline;
  font-size: 16px;
  font-weight: 300;
  text-align: left;
  text-transform: none;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
}

.emotion-2 a:hover {
  color: rgb(5, 87, 168);
}

.emotion-2 a:visited,
.emotion-2 a:link,
.emotion-2 a:active {
  color: #0667c8;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <input
      className="wireinput"
      disabled={true}
      id="1"
      style={
        Object {
          "cursor": "not-allowed",
          "height": "22px",
          "marginBottom": "0",
          "opacity": 0,
          "width": "22px",
        }
      }
      type="checkbox"
    />
    <label
      className="emotion-2"
      disabled={true}
      htmlFor="1"
    >
      Check
      <svg
        height="13"
        viewBox="0 0 16 13"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.65685 12.0711L15.9842 1.62738L14.57 0.213167L5.65685 9.24264L1.41421 5L0 6.41421L5.65685 12.0711Z"
        />
      </svg>
    </label>
  </div>
</div>
`;

exports[`"CheckboxLabel" renders 1`] = `
.emotion-0 {
  background: rgb(237, 237, 238);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  color: rgb(29, 30, 31);
  display: inline;
  font-size: 16px;
  font-weight: 300;
  text-align: left;
  text-transform: none;
  color: rgb(29, 30, 31);
  display: inline;
  font-size: 16px;
  font-weight: 300;
  text-align: left;
  text-transform: none;
}

.emotion-1 a {
  color: rgb(29, 30, 31);
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="emotion-0"
>
  <span
    className="emotion-1"
  >
    Label
  </span>
</div>
`;
